adjusted the media styles

--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
 
             <div class="contact-section-content">
 
+                <div class="contact-section-content-logo">
+                    <img src="./assets/images/linkedin.png" alt="Linkedin profile">
+                </div>
+
+                <div class="contact-section-content-logo">
+                    <img src="./assets/images/ymail.png" alt="Yahoo Mail">
+                </div>
+                <div class="contact-section-content-logo">
+                    <img src="./assets/images/gmail.png" alt="Gmail">
+                </div>
+                <div class="contact-section-content-logo">
+                    <img src="./assets/images/github.png" alt="GitHub">
+                </div>
+
             </div>
             
 
