add experience to nav bar and linked nav items to sections

--- a/index.html
+++ b/index.html
@@ -50,19 +50,22 @@
         <!--Section containing the navigation links-->
         <div class="navigation-bar-links">
           <div class="nav-link-item">
-            <a class="nav-link" href="">Completed Projects</a>
+            <a class="nav-link" href="#about-section">About Me</a>
           </div>
           <div class="nav-link-item">
-            <a class="nav-link" href="">About Me</a>
+            <a class="nav-link" href="#experience-section">Experience</a>
           </div>
           <div class="nav-link-item">
-            <a class="nav-link" href="">Contact Me</a>
+            <a class="nav-link" href="#completed-projects-section">Completed Projects</a>
+          </div>
+          <div class="nav-link-item">
+            <a class="nav-link" href="#contact-section">Contact Me</a>
           </div>
         </div>
       </nav>
     </header>
     <div class="main-content">
-      <div class="about-section">
+      <div class="about-section" id="about-section">
         <div class="about-section-title">
           <h1>About Me</h1>
         </div>
@@ -75,7 +78,7 @@
         </div>
       </div>
 
-      <div class="experience-section">
+      <div class="experience-section" id="experience-section">
         <div class="experience-section-title">
           <h2>Work Experience</h2>
         </div>
@@ -88,7 +91,7 @@
         </div>
       </div>
 
-      <div class="completed-projects-section">
+      <div class="completed-projects-section" id="completed-projects-section">
         <div class="completed-projects-section-title">
           <h3>Completed Projects</h3>
         </div>
@@ -155,7 +158,7 @@
         </div>
       </div>
 
-      <div class="contact-section">
+      <div class="contact-section" id="contact-section">
         <div class="contact-section-title">
           <h4>Contact Me</h4>
         </div>
