added labeles to contact logo items

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
       <div class="experience-section" id="experience-section">
         <div class="experience-section-title">
-          <h2>Work Experience</h2>
+          <h2>Experience</h2>
         </div>
 
         <div class="experience-section-content">
@@ -165,17 +165,30 @@
 
         <div class="contact-section-content">
           <div class="contact-section-content-logo">
-            <img src="./assets/images/linkedin.png" alt="Linkedin profile" />
+            <div class="hoverwrap">
+              <img src="./assets/images/linkedin.png" alt="Linkedin profile" />
+              <div class="hovercap">linkedin.com/in/Alexandru--Tanase</div>
+            </div>
           </div>
 
           <div class="contact-section-content-logo">
-            <img src="./assets/images/ymail.png" alt="Yahoo Mail" />
+            <div class="hoverwrap">
+              <img src="./assets/images/ymail.png" alt="Yahoo Mail" />
+              <div class="hovercap">t_alexandru87@yahoo.com</div>
+            </div>
           </div>
           <div class="contact-section-content-logo">
-            <img src="./assets/images/gmail.png" alt="Gmail" />
+            <div class="hoverwrap">
+              <img src="./assets/images/gmail.png" alt="Gmail" />
+              <div class="hovercap">talex21101987@gmail.com</div>
+            </div>
+            
           </div>
           <div class="contact-section-content-logo">
-            <img src="./assets/images/github.png" alt="GitHub" />
+            <div class="hoverwrap">
+              <img src="./assets/images/github.png" alt="GitHub" />
+              <div class="hovercap">talexandru1987</div>
+            </div>
           </div>
         </div>
       </div>
