completed formating the experience section content

--- a/index.html
+++ b/index.html
@@ -84,10 +84,27 @@
         </div>
 
         <div class="experience-section-content">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-          Necessitatibus exercitationem, corporis ut doloribus soluta ratione
-          suscipit animi maxime dolor tenetur reprehenderit nesciunt architecto
-          similique cupiditate minus iusto libero. Possimus, expedita.
+          <ul>
+            <li>
+              <p class="experience-section-content-text">(2017-2019) Quality Engineer</p>
+            </li>
+
+            <li>
+              <p class="experience-section-content-text">(2017-2019) Quality Engineer</p>
+            </li>
+
+            <li>
+              <p class="experience-section-content-text">(2017-2019) Quality Engineer</p>
+            </li>
+
+            <li>
+              <p class="experience-section-content-text">(2017-2019) Quality Engineer</p>
+            </li>
+
+            <li>
+              <p class="experience-section-content-text">(2017-2019) Quality Engineer</p>
+            </li>
+          </ul>
         </div>
       </div>
 
