updated the content

--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
         </div>
 
         <div class="about-section-content">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur
-          repudiandae in nemo alias laborum repellat, explicabo rem ab eligendi
-          eveniet numquam, unde fuga, neque enim ullam corporis dolorem odit
-          asperiores.
+          As an RPA developer my responsibilities encompass the entire Software Development Life Cycle for automation created using UiPath. 
+          This means liaising with different departments to identify suitable processes, applying lean thinking and creating the most efficient version of the identified processes. 
+          Robust workflows are then designed through the use of low code software solutions in the form of Knack and Integromat, with advanced coding being completed in JavaScript, MySQL and .NET
         </div>
       </div>
 
@@ -86,24 +85,21 @@
         <div class="experience-section-content">
           <ul>
             <li>
-              <p class="experience-section-content-text">(2017-2019) Quality Engineer</p>
+              <p class="experience-section-content-text">(2014-2015) Quality Engineer</p>
             </li>
 
             <li>
-              <p class="experience-section-content-text">(2017-2019) Quality Engineer</p>
+              <p class="experience-section-content-text">(2015-2018) Quality Inspector</p>
             </li>
 
             <li>
-              <p class="experience-section-content-text">(2017-2019) Quality Engineer</p>
+              <p class="experience-section-content-text">(2018-2021) Test Engineer</p>
             </li>
 
             <li>
-              <p class="experience-section-content-text">(2017-2019) Quality Engineer</p>
+              <p class="experience-section-content-text">(Current role) Robotic Process Automation Developer</p>
             </li>
 
-            <li>
-              <p class="experience-section-content-text">(2017-2019) Quality Engineer</p>
-            </li>
           </ul>
         </div>
       </div>
@@ -116,11 +112,13 @@
         <div class="completed-projects-section-content">
           <ul>
             <li>
+             <a href="https://github.com/talexandru1987/w1-marketing-agency-resubmit.git">
               <img
                 class="completed-projects-section-content-img"
-                src="./assets/images/project.png"
+                src="./assets/images/marketing-agency.png"
                 alt="project 1"
               />
+             </a>
             </li>
             <li>
               <img
