added more semnatic elements

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         </div>
       </nav>
     </header>
-    <div class="main-content">
-      <div class="about-section" id="about-section">
+    <main class="main-content">
+      <section class="about-section" id="about-section">
         <div class="about-section-title">
           <h1>About Me</h1>
         </div>
@@ -75,9 +75,9 @@
           This means liaising with different departments to identify suitable processes, applying lean thinking and creating the most efficient version of the identified processes. 
           Robust workflows are then designed through the use of low code software solutions in the form of Knack and Integromat, with advanced coding being completed in JavaScript, MySQL and .NET
         </div>
-      </div>
+      </section>
 
-      <div class="experience-section" id="experience-section">
+      <section class="experience-section" id="experience-section">
         <div class="experience-section-title">
           <h2>Experience</h2>
         </div>
@@ -102,9 +102,9 @@
 
           </ul>
         </div>
-      </div>
+      </section>
 
-      <div class="completed-projects-section" id="completed-projects-section">
+      <section class="completed-projects-section" id="completed-projects-section">
         <div class="completed-projects-section-title">
           <h3>Completed Projects</h3>
         </div>
@@ -171,9 +171,9 @@
             </li>
           </ul>
         </div>
-      </div>
+      </section>
 
-      <div class="contact-section" id="contact-section">
+      <section class="contact-section" id="contact-section">
         <div class="contact-section-title">
           <h4>Contact Me</h4>
         </div>
@@ -206,8 +206,8 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
+      </section>
+    </main>
     <footer>
       <p class="footer-title">Made by Alexandru</p>
     </footer>
