--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
     <title>Alexandru's Work Portfolio</title>
 
     <!-- code to change the favicon-->
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="./assets/images/portfolio.png"
-      alt="favicon"
-    />
+    <link rel="icon" type="image/x-icon" href="./assets/images/portfolio.png" alt="favicon" />
 
     <meta name="author" content="Alexandru Tanase" />
 
@@ -36,11 +31,7 @@
         <!--Section containing the image and profile name-->
         <div class="navigation-bar-profile">
           <div class="navigation-bar-profile-img">
-            <img
-              class="profile-img"
-              src="./assets/images/download.png"
-              alt="Alexandru Tanase"
-            />
+            <img class="profile-img" src="./assets/images/download.png" alt="Alexandru Tanase" />
           </div>
           <div class="navigation-bar-profile-name">
             <p class="profile-name">Alexandru Tanase</p>
@@ -71,9 +62,12 @@
         </div>
 
         <div class="about-section-content">
-          As an RPA developer my responsibilities encompass the entire Software Development Life Cycle for automation created using UiPath. 
-          This means liaising with different departments to identify suitable processes, applying lean thinking and creating the most efficient version of the identified processes. 
-          Robust workflows are then designed through the use of low code software solutions in the form of Knack and Integromat, with advanced coding being completed in JavaScript, MySQL and .NET
+          As an RPA developer my responsibilities encompass the entire Software Development Life
+          Cycle for automation created using UiPath. This means liaising with different departments
+          to identify suitable processes, applying lean thinking and creating the most efficient
+          version of the identified processes. Robust workflows are then designed through the use of
+          low code software solutions in the form of Knack and Integromat, with advanced coding
+          being completed in JavaScript, MySQL and .NET
         </div>
       </section>
 
@@ -97,9 +91,10 @@
             </li>
 
             <li>
-              <p class="experience-section-content-text">(Current role) Robotic Process Automation Developer</p>
+              <p class="experience-section-content-text">
+                (Current role) Robotic Process Automation Developer
+              </p>
             </li>
-
           </ul>
         </div>
       </section>
@@ -112,41 +107,50 @@
         <div class="completed-projects-section-content">
           <ul>
             <li>
-             <a href="https://github.com/talexandru1987/w1-marketing-agency-resubmit.git">
-              <img
-                class="completed-projects-section-content-img"
-                src="./assets/images/marketing-agency.png"
-                alt="project 1"
-              />
-             </a>
+              <a href="https://github.com/talexandru1987/group-4-project-1.git">
+                <img
+                  class="completed-projects-section-content-img"
+                  src="./assets/images/movie-night.png"
+                  alt="project 1"
+                />
+              </a>
             </li>
             <li>
-              <img
-                class="completed-projects-section-content-img"
-                src="./assets/images/project.png"
-                alt="project 2"
-              />
+              <a href="https://github.com/talexandru1987/w3-password-generator.git">
+                <img
+                  class="completed-projects-section-content-img"
+                  src="./assets/images/generator.png"
+                  alt="project 2"
+                />
+              </a>
+            </li>
+
+            <li>
+              <a href="https://github.com/talexandru1987/w5-work-day-scheduler.git">
+                <img
+                  class="completed-projects-section-content-img"
+                  src="./assets/images/preview.png"
+                  alt="project 3"
+                />
+              </a>
             </li>
             <li>
-              <img
-                class="completed-projects-section-content-img"
-                src="./assets/images/project.png"
-                alt="project 3"
-              />
+              <a href="https://github.com/talexandru1987/w4-code-quiz.git">
+                <img
+                  class="completed-projects-section-content-img"
+                  src="./assets/images/questions.png"
+                  alt="project 4"
+                />
+              </a>
             </li>
             <li>
-              <img
-                class="completed-projects-section-content-img"
-                src="./assets/images/project.png"
-                alt="project 4"
-              />
-            </li>
-            <li>
-              <img
-                class="completed-projects-section-content-img"
-                src="./assets/images/project.png"
-                alt="project 5"
-              />
+              <a href="https://github.com/talexandru1987/weather-dashboard.git">
+                <img
+                  class="completed-projects-section-content-img"
+                  src="./assets/images/weather-dashboard.png"
+                  alt="project 5"
+                />
+              </a>
             </li>
             <li>
               <img
@@ -163,11 +167,13 @@
               />
             </li>
             <li>
-              <img
-                class="completed-projects-section-content-img"
-                src="./assets/images/project.png"
-                alt="project 8"
-              />
+              <a href="https://github.com/talexandru1987/uipath-remove-duplicate-vehicles.git">
+                <img
+                  class="completed-projects-section-content-img"
+                  src="./assets/images/duplicate_removel_workflow.png"
+                  alt="project 8"
+                />
+              </a>
             </li>
           </ul>
         </div>
@@ -197,7 +203,6 @@
               <img src="./assets/images/gmail.png" alt="Gmail" />
               <div class="hovercap">talex21101987@gmail.com</div>
             </div>
-            
           </div>
           <div class="contact-section-content-logo">
             <div class="hoverwrap">
@@ -205,9 +210,15 @@
               <div class="hovercap">talexandru1987</div>
             </div>
           </div>
+          <div class="contact-section-content-logo">
+            <a
+              href="https://drive.google.com/drive/folders/11OpvV1Gzh_2MvEPbmqU_AMfJt-j6VClF?usp=sharing"
+            >
+              <img src="./assets/images/resume.png" alt="CV" />
+            </a>
+          </div>
         </div>
       </section>
-      
     </main>
     <footer>
       <p class="footer-title">Made by Alexandru</p>
