updated the portfolio

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!--Section containing the image and profile name-->
         <div class="navigation-bar-profile">
           <div class="navigation-bar-profile-img">
-            <img class="profile-img" src="./assets/images/download.png" alt="Alexandru Tanase" />
+            <img class="profile-img" src="./assets/images/download.jpg" alt="Alexandru Tanase" />
           </div>
           <div class="navigation-bar-profile-name">
             <p class="profile-name">Alexandru Tanase</p>
@@ -153,18 +153,22 @@
               </a>
             </li>
             <li>
-              <img
-                class="completed-projects-section-content-img"
-                src="./assets/images/project.png"
-                alt="project 6"
-              />
+              <a href="https://simple-tech-blog-app.herokuapp.com/">
+                <img
+                  class="completed-projects-section-content-img"
+                  src="./assets/images/tech-blog.png"
+                  alt="project 6"
+                />
+              </a>
             </li>
             <li>
-              <img
-                class="completed-projects-section-content-img"
-                src="./assets/images/project.png"
-                alt="project 7"
-              />
+              <a href="https://what-is-on.herokuapp.com/">
+                <img
+                  class="completed-projects-section-content-img"
+                  src="./assets/images/what-is-on.png"
+                  alt="project 7"
+                />
+              </a>
             </li>
             <li>
               <a href="https://github.com/talexandru1987/uipath-remove-duplicate-vehicles.git">
